--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
 <div class="product-grid">
 
     <div class="product-card">
-      <img src="stand1.png" alt="T-Shirt">
+      <img src="images/skatersoul.png" alt="T-Shirt">
       <h3 class="title">Skater Soul Graphic Tee</h3>
       <h5>Black cotton t-shirt with a large white print of a skater holding a skateboard. Standard fit with short sleeves.</h5>
       <p class="price">₱699.00</p>
     </div>
 
     <div class="product-card">
-      <img src="stand2.png" alt="Hoodie">
+      <img src="images/chaosclowntee.png" alt="Hoodie">
       <h3 class="title">Chaos Clown Tee</h3>
       <h5>Black cotton t-shirt featuring a red and white graphic of a clown face. Standard fit with short sleeves.</h5>
       <p class="price">₱599.00</p>
     </div>
 
     <div class="product-card">
-      <img src="stand3.png" alt="Pants">
+      <img src="images/ashfadebite.jpg" alt="Pants">
       <h3 class="title">Ashfade Bite Tee</h3>
       <h5>Beige cotton t-shirt with a black print showing an open mouth and sharp teeth. Standard fit with short sleeves.</h5>
       <p class="price">₱599.00</p>
     </div>
 
     <div class="product-card">
-      <img src="stand4.png" alt="Shoes">
+      <img src="images/skatercrewcrop.png" alt="Shoes">
       <h3 class="title">Skater Crew Crop Tee</h3>
       <h5>Black cropped t-shirt with a white graphic of multiple skater boys heads. Relaxed fit with short sleeves.</h5>
       <p class="price">₱499.00</p>
@@ -152,6 +152,7 @@
 </body>
 
 </html>
+
 
 
 
