--- a/index.html
+++ b/index.html
@@ -148,10 +148,58 @@
   </div>
 </section>
 
+  <footer class="footer">
+        <div class="footer-container">
+            <!-- Schedule Column -->
+            <div class="footer-column">
+                <h3>Schedule</h3>
+                <p class="schedule-day">Monday - Friday</p>
+                <p class="schedule-time">8:00 AM - 5:00 PM</p>
+            </div>
+
+            <!-- Address Column -->
+            <div class="footer-column">
+                <h3>Address</h3>
+                <p>Technological Institute of the Philippines</p>
+                <p>Quezon City</p>
+            </div>
+
+            <!-- Follow Us Column -->
+            <div class="footer-column">
+                <h3>Follow us</h3>
+                <div class="social-links">
+                    <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+                        <i class="fa-brands fa-facebook"></i> Facebook
+                    </a>
+                    <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram"></i> Instagram
+                    </a>
+                    <a href="https://tiktok.com" target="_blank" aria-label="TikTok">
+                        <i class="fa-brands fa-tiktok"></i> TikTok
+                    </a>
+                </div>
+            </div>
+
+            <!-- Contact Column -->
+            <div class="footer-column">
+                <h3>Contact</h3>
+                <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
+                <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+            </div>
+        </div>
+        
+        <div class="footer-bottom">
+            <p>&copy; 2025 AFEEC. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+
 
 </body>
 
 </html>
+
 
 
 
