--- a/index.html
+++ b/index.html
@@ -148,57 +148,67 @@
   </div>
 </section>
 
-  <footer class="footer">
-        <div class="footer-container">
-            <!-- Schedule Column -->
-            <div class="footer-column">
-                <h3>Schedule</h3>
-                <p class="schedule-day">Monday - Friday</p>
-                <p class="schedule-time">8:00 AM - 5:00 PM</p>
-            </div>
+  <!-- FOOTER SECTION - RESTRUCTURED -->
+<footer class="footer">
+    <div class="footer-container">
+        <!-- LEFT SIDE: Newsletter -->
+        <div class="footer-left">
+            <h3>Newsletter</h3>
+            <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+            <form class="newsletter-form">
+                <input type="email" placeholder="Email address" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
 
-            <!-- Address Column -->
-            <div class="footer-column">
-                <h3>Address</h3>
-                <p>Technological Institute of the Philippines</p>
-                <p>Quezon City</p>
-            </div>
+        <!-- RIGHT SIDE: Shop Info Grid -->
+        <div class="footer-right">
+            <div class="info-grid">
+                <!-- Schedule -->
+                <div class="info-box">
+                    <h3>Schedule</h3>
+                    <p class="schedule-day">Monday - Friday</p>
+                    <p class="schedule-time">8:00 AM - 5:00 PM</p>
+                </div>
 
-            <!-- Follow Us Column -->
-            <div class="footer-column">
-                <h3>Follow us</h3>
-                <div class="social-links">
-                    <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-                        <i class="fa-brands fa-facebook"></i> Facebook
-                    </a>
-                    <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-                        <i class="fa-brands fa-instagram"></i> Instagram
-                    </a>
-                    <a href="https://tiktok.com" target="_blank" aria-label="TikTok">
-                        <i class="fa-brands fa-tiktok"></i> TikTok
-                    </a>
+                <!-- Address -->
+                <div class="info-box">
+                    <h3>Address</h3>
+                    <p>Technological Institute of the Philippines</p>
+                    <p>Quezon City</p>
+                </div>
+
+                <!-- Follow Us -->
+                <div class="info-box">
+                    <h3>Follow us</h3>
+                    <div class="social-links">
+                        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                        <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                        <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
+                    </div>
+                </div>
+
+                <!-- Contact -->
+                <div class="info-box">
+                    <h3>Contact</h3>
+                    <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
+                    <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
                 </div>
             </div>
-
-            <!-- Contact Column -->
-            <div class="footer-column">
-                <h3>Contact</h3>
-                <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
-                <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
-            </div>
         </div>
-        
-        <div class="footer-bottom">
-            <p>&copy; 2025 AFEEC. All rights reserved.</p>
-        </div>
-    </footer>
+    </div>
+    
+    <div class="footer-bottom">
+        <p>&copy; 2025 AFEEC. All rights reserved.</p>
+    </div>
+</footer>
 
-    <script src="script.js"></script>
 
 
 </body>
 
 </html>
+
 
 
 
