--- a/index.html
+++ b/index.html
@@ -1,217 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Affectious Closet</title>
-
-  <a href="account.html">
-  <i class="fas-solid fa-user"></i>
-</a>
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
-   <link 
-  rel="stylesheet" 
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
-  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-  crossorigin="anonymous" 
-  referrerpolicy="no-referrer" 
-/>
-
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AFEEC - Modern Streetwear</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <img src="images/logoafeec.png" class="logo-img">
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="#">Blog</a>
-      <a href="shop.html">Shop</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </div>
-
-    <div class="icons">
-      <label for="search-toggle"><i class="fas fa-search"></i></label>
-      <input type="checkbox" id="search-toggle">
-      <div class="search-box">
-        <input type="text" placeholder="Search...">
-      </div>
-        <a href="#login-modal"><i class="fas fa-user"></i></a>
-      <i class="fas fa-shopping-cart"></i>
-    </div>
-
-
-
-      <div class="login-modal" id="login-modal">
-    <div class="login-box">
-
-<h1><span style="color: black;">Login</span></h1>
-      <div class="links">
-      <form>
-<input type="text" placeholder="Username" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <a href="forgot.html">Forgot Password?</a>
-        <a href="signup.html">Create Account</a>
-
-        <button type="submit" class="btn">Login</button>
-        <a href="#" class="close-btn">Close</a>
-      </form>
-    </div>
-    </div>
-  </div>
-  </nav>
-<div class="content-section">
-  <div class="text-content">
-    <img src="images/logoafeec.png" alt="AFEEC Logo" class="hero-logo">
-    <p>New Outfit for this Year</p>
-    <h1><span style="color: grey;">FRESH LOOK, </span>FRESH DEALS</h1>
-    <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4><br>
-    <button class="shop-btn">SHOP NOW</button>
-  </div>
-  <img src="images/featuredproduct.png" class="right-img" alt="Featured Product">
-</div>
-</div>
-<br><h4 class="title">New Release</h4>
-<div class="product-grid">
-
-    <div class="product-card">
-      <img src="images/skatersoul.png" alt="T-Shirt">
-      <h3 class="title">Skater Soul Graphic Tee</h3>
-      <h5>Black cotton t-shirt with a large white print of a skater holding a skateboard. Standard fit with short sleeves.</h5>
-      <p class="price">₱699.00</p>
-    </div>
-
-    <div class="product-card">
-      <img src="images/chaosclowntee.png" alt="Hoodie">
-      <h3 class="title">Chaos Clown Tee</h3>
-      <h5>Black cotton t-shirt featuring a red and white graphic of a clown face. Standard fit with short sleeves.</h5>
-      <p class="price">₱599.00</p>
-    </div>
-
-    <div class="product-card">
-      <img src="images/ashfadebite.jpg" alt="Pants">
-      <h3 class="title">Ashfade Bite Tee</h3>
-      <h5>Beige cotton t-shirt with a black print showing an open mouth and sharp teeth. Standard fit with short sleeves.</h5>
-      <p class="price">₱599.00</p>
-    </div>
-
-    <div class="product-card">
-      <img src="images/skatercrewcrop.png" alt="Shoes">
-      <h3 class="title">Skater Crew Crop Tee</h3>
-      <h5>Black cropped t-shirt with a white graphic of multiple skater boys heads. Relaxed fit with short sleeves.</h5>
-      <p class="price">₱499.00</p>
-    </div>
-  </div>
-  <h4 class="title">About Us</h4><br>
-  <section class="about-section">
-  <p>
-    Welcome to <b>AFEEC</b> — your go-to destination for modern streetwear and stylish apparel.  
-    We believe fashion should be comfortable, expressive, and accessible for everyone.  
-    Every collection we design is made to bring confidence and creativity to your everyday look.
-  </p>
-
-  <p>
-    From trendy tops to timeless accessories, <b>AFEEC</b> represents individuality,  
-    passion, and the love for bold fashion. Be part of our growing community  
-    and wear your story with pride.
-  </p>
-<div class="button-container">
-  <button class="cta-about">Learn More</button>
-  </div>
-</section>
-
-<section class="categories">
-  <div class="category-box">
-    <i class="fa-solid fa-shirt"></i>
-    <h3>Very Soft Fabric</h3>
-    <p>Made with smooth and comfy material that feels gentle on your skin.</p>
-  </div>
-
-  <div class="category-box">
-    <i class="fa-solid fa-scissors"></i>
-    <h3>Durable Quality</h3>
-    <p>Designed to last, Does not get dirty easily even after repeated use.</p>
-  </div>
-
-  <div class="category-box">
-    <i class="fa-solid fa-wind"></i>
-    <h3>Skin-Friendly</h3>
-    <p>Safe and gentle for all skin types, perfect for everyday wear.</p>
-  </div>
-
-  <div class="category-box">
-    <i class="fa-solid fa-heart"></i>
-    <h3>Made with Care</h3>
-    <p>Each piece is crafted with love and attention to detail for your comfort.</p>
-  </div>
-</section>
-
-  <!-- FOOTER SECTION - RESTRUCTURED -->
-<footer class="footer">
-    <div class="footer-container">
-        <!-- LEFT SIDE: Newsletter -->
-        <div class="footer-left">
-            <h3>Newsletter</h3>
-            <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Email address" required>
-                <button type="submit">Subscribe</button>
-            </form>
+    <!-- Navigation -->
+    <nav>
+        <img src="afeec.png" alt="AFEEC Logo" class="logo-img">
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="#blog">Blog</a>
+            <a href="shop.html">Shop</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
         </div>
+        <div class="icons">
+            <input type="checkbox" id="search-toggle">
+            <label for="search-toggle"><i class="fa-solid fa-magnifying-glass"></i></label>
+            <div class="search-box">
+                <input type="text" placeholder="Search...">
+            </div>
+            <a href="#login"><i class="fa-solid fa-user"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+        </div>
+    </nav>
 
-        <!-- RIGHT SIDE: Shop Info Grid -->
-        <div class="footer-right">
-            <div class="info-grid">
-                <!-- Schedule -->
-                <div class="info-box">
+    <!-- Login Modal -->
+    <div class="login-modal" id="login">
+        <div class="login-box">
+            <img src="afeec.png" class="logo" alt="Logo">
+            <h2>Login</h2>
+            <form>
+                <input type="text" placeholder="Username" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit" class="btn">Login</button>
+            </form>
+            <div class="links">
+                <a href="#">Forgot Password?</a>
+                <a href="#">Sign Up</a>
+            </div>
+            <a href="#" class="close-btn">Close</a>
+        </div>
+    </div>
+
+    <!-- Hero Section -->
+    <section class="content-section">
+        <div class="text-content">
+            <img src="afeec.png" class="hero-logo" alt="AFEEC">
+            <p>New Outfit for this Year</p>
+            <h1><span style="color: gray;">FRESH LOOK,</span> FRESH DEALS</h1>
+            <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
+            <button class="shop-btn">SHOP NOW</button>
+        </div>
+        <img src="img.jpg" class="right-img" alt="Models">
+    </section>
+
+    <!-- New Release Section -->
+    <h2 class="title">New Release</h2>
+    <section class="product-grid">
+        <div class="product-card">
+            <img src="img.jpg" alt="Product 1">
+            <h3>New Outfit for this Year</h3>
+            <p class="price">₱699.00</p>
+        </div>
+        <div class="product-card">
+            <img src="img.jpg" alt="Product 2">
+            <h3>New Outfit for this Year</h3>
+            <p class="price">₱599.00</p>
+        </div>
+        <div class="product-card">
+            <img src="img.jpg" alt="Product 3">
+            <h3>New Outfit for this Year</h3>
+            <p class="price">₱599.00</p>
+        </div>
+        <div class="product-card">
+            <img src="img.jpg" alt="Product 4">
+            <h3>New Outfit for this Year</h3>
+            <p class="price">₱499.00</p>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <h2>Welcome to <strong>AFEEC</strong></h2>
+        <p>— your go-to destination for modern streetwear and stylish apparel.</p>
+        <p>We believe fashion should be comfortable, expressive, and accessible for everyone. Every collection we design is made to bring confidence and creativity to your everyday look.</p>
+        <p>From trendy tops to timeless accessories, <strong>AFEEC</strong> represents individuality, passion, and the love for bold fashion. Be part of our growing community and wear your story with pride.</p>
+        <div class="button-container">
+            <button class="cta-about">Learn More</button>
+        </div>
+    </section>
+
+    <!-- Categories Section -->
+    <section class="categories">
+        <div class="category-box">
+            <i class="fa-solid fa-shirt"></i>
+            <h3>Very Soft Fabric</h3>
+            <p>Made with smooth and comfy material that feels gentle on your skin.</p>
+        </div>
+        <div class="category-box">
+            <i class="fa-solid fa-scissors"></i>
+            <h3>Durable Quality</h3>
+            <p>Designed to last, Does not get dirty easily even after repeated use.</p>
+        </div>
+        <div class="category-box">
+            <i class="fa-solid fa-droplet"></i>
+            <h3>Skin-Friendly</h3>
+            <p>Safe and gentle for all skin types, perfect for everyday wear.</p>
+        </div>
+        <div class="category-box">
+            <i class="fa-solid fa-heart"></i>
+            <h3>Made with Care</h3>
+            <p>Each piece is crafted with love and attention to detail for your comfort.</p>
+        </div>
+    </section>
+
+    <!-- FOOTER - EXACT REFERENCE DESIGN -->
+    <footer class="footer">
+        <div class="footer-wrapper">
+            <!-- Left: Newsletter -->
+            <div class="footer-newsletter">
+                <h2>Newsletter</h2>
+                <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Email address" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+
+            <!-- Right: Grid of Info -->
+            <div class="footer-info-grid">
+                <div class="info-item">
                     <h3>Schedule</h3>
-                    <p class="schedule-day">Monday - Friday</p>
-                    <p class="schedule-time">8:00 AM - 5:00 PM</p>
+                    <p><strong>Monday - Friday</strong></p>
+                    <p>8:00 AM - 5:00 PM</p>
                 </div>
 
-                <!-- Address -->
-                <div class="info-box">
+                <div class="info-item">
                     <h3>Address</h3>
                     <p>Technological Institute of the Philippines</p>
                     <p>Quezon City</p>
                 </div>
 
-                <!-- Follow Us -->
-                <div class="info-box">
+                <div class="info-item">
                     <h3>Follow us</h3>
-                    <div class="social-links">
-                        <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                        <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                        <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
-                    </div>
+                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                    <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
                 </div>
 
-                <!-- Contact -->
-                <div class="info-box">
+                <div class="info-item">
                     <h3>Contact</h3>
                     <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
                     <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
                 </div>
             </div>
         </div>
-    </div>
-    
-    <div class="footer-bottom">
-        <p>&copy; 2025 AFEEC. All rights reserved.</p>
-    </div>
-</footer>
 
+        <div class="footer-copyright">
+            <p>&copy; 2025 AFEEC. All rights reserved.</p>
+        </div>
+    </footer>
 
-
+    <script src="script.js"></script>
 </body>
-
 </html>
-
-
-
-
-
-
-
