--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
             <button class="shop-btn">SHOP NOW</button>
         </div>
-        <img src="img.jpg" class="right-img" alt="Models">
+        <img src="images/featuredproduct.png" class="right-img" alt="Models">
     </section>
 
     <!-- New Release Section -->
@@ -169,5 +169,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
