--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p class="price">₱699.00</p>
         </div>
         <div class="product-card">
-            <img src="iamges/chaosclowntee.png" alt="Product 2">
+            <img src="images/chaosclowntee.png" alt="Product 2">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
@@ -169,6 +169,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
