--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo-img">
+        <img src="afeec.png" alt="AFEEC Logo" class="logo-img">
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#blog">Blog</a>
@@ -33,7 +33,7 @@
     <!-- Login Modal -->
     <div class="login-modal" id="login">
         <div class="login-box">
-            <img src="images/logoafeec.png" class="logo" alt="Logo">
+            <img src="afeec.png" class="logo" alt="Logo">
             <h2>Login</h2>
             <form>
                 <input type="text" placeholder="Username" required>
@@ -51,35 +51,35 @@
     <!-- Hero Section -->
     <section class="content-section">
         <div class="text-content">
-            <img src="images/logoafeec.png" class="hero-logo" alt="AFEEC">
+            <img src="afeec.png" class="hero-logo" alt="AFEEC">
             <p>New Outfit for this Year</p>
             <h1><span style="color: gray;">FRESH LOOK,</span> FRESH DEALS</h1>
             <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
             <button class="shop-btn">SHOP NOW</button>
         </div>
-        <img src="images/featuredproduct.png" class="right-img" alt="Models">
+        <img src="img.jpg" class="right-img" alt="Models">
     </section>
 
     <!-- New Release Section -->
     <h2 class="title">New Release</h2>
     <section class="product-grid">
         <div class="product-card">
-            <img src="images/skatersoul.png" alt="Product 1">
+            <img src="img.jpg" alt="Product 1">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱699.00</p>
         </div>
         <div class="product-card">
-            <img src="images/chaosclowntee.png" alt="Product 2">
+            <img src="img.jpg" alt="Product 2">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
         <div class="product-card">
-            <img src="images/ashfadebite.jpg" alt="Product 3">
+            <img src="img.jpg" alt="Product 3">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
         <div class="product-card">
-            <img src="images/skatercrewcrop.png" alt="Product 4">
+            <img src="img.jpg" alt="Product 4">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱499.00</p>
         </div>
@@ -120,56 +120,64 @@
         </div>
     </section>
 
-    <!-- FOOTER - EXACT REFERENCE DESIGN -->
-    <footer class="footer">
-        <div class="footer-wrapper">
-            <div class="footer-newsletter">
-                <h2>Newsletter</h2>
-                <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Email address" required>
-                    <button type="submit">Subscribe</button>
+    <!-- FOOTER - PROPERLY STRUCTURED -->
+    <footer class="site-footer">
+        <div class="footer-main">
+            <!-- Left: Newsletter -->
+            <div class="footer-left-section">
+                <h2 class="footer-heading">Newsletter</h2>
+                <p class="footer-text">Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+                <form class="footer-newsletter-form">
+                    <input type="email" class="footer-email-input" placeholder="Email address" required>
+                    <button type="submit" class="footer-submit-btn">Subscribe</button>
                 </form>
             </div>
 
-            <div class="footer-info-grid">
-                <div class="info-item">
-                    <h3>Schedule</h3>
-                    <p><strong>Monday - Friday</strong></p>
-                    <p>8:00 AM - 5:00 PM</p>
+            <!-- Right: Info Grid -->
+            <div class="footer-right-section">
+                <div class="footer-info-item">
+                    <h3 class="footer-subtitle">Schedule</h3>
+                    <p class="footer-detail"><strong>Monday - Friday</strong></p>
+                    <p class="footer-detail">8:00 AM - 5:00 PM</p>
                 </div>
 
-                <div class="info-item">
-                    <h3>Address</h3>
-                    <p>Technological Institute of the Philippines</p>
-                    <p>Quezon City</p>
+                <div class="footer-info-item">
+                    <h3 class="footer-subtitle">Address</h3>
+                    <p class="footer-detail">Technological Institute of the Philippines</p>
+                    <p class="footer-detail">Quezon City</p>
                 </div>
 
-                <div class="info-item">
-                    <h3>Follow us</h3>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                    <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
+                <div class="footer-info-item">
+                    <h3 class="footer-subtitle">Follow us</h3>
+                    <a href="https://facebook.com" class="footer-social-link" target="_blank">
+                        <i class="fa-brands fa-facebook"></i> Facebook
+                    </a>
+                    <a href="https://instagram.com" class="footer-social-link" target="_blank">
+                        <i class="fa-brands fa-instagram"></i> Instagram
+                    </a>
+                    <a href="https://tiktok.com" class="footer-social-link" target="_blank">
+                        <i class="fa-brands fa-tiktok"></i> TikTok
+                    </a>
                 </div>
 
-                <div class="info-item">
-                    <h3>Contact</h3>
-                    <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
-                    <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+                <div class="footer-info-item">
+                    <h3 class="footer-subtitle">Contact</h3>
+                    <p class="footer-detail">
+                        <i class="fa-solid fa-phone"></i> +63 912 345 67890
+                    </p>
+                    <p class="footer-detail">
+                        <i class="fa-solid fa-envelope"></i> 
+                        <a href="mailto:afeec@tip.edu.ph" class="footer-email-link">afeec@tip.edu.ph</a>
+                    </p>
                 </div>
             </div>
         </div>
 
-        <div class="footer-copyright">
+        <div class="footer-bottom-bar">
             <p>&copy; 2025 AFEEC. All rights reserved.</p>
         </div>
     </footer>
 
-
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
