--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <img src="afeec.png" alt="AFEEC Logo" class="logo-img">
+        <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo-img">
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#blog">Blog</a>
@@ -33,7 +33,7 @@
     <!-- Login Modal -->
     <div class="login-modal" id="login">
         <div class="login-box">
-            <img src="afeec.png" class="logo" alt="Logo">
+            <img src="images/logoafeec.png" class="logo" alt="Logo">
             <h2>Login</h2>
             <form>
                 <input type="text" placeholder="Username" required>
@@ -51,35 +51,35 @@
     <!-- Hero Section -->
     <section class="content-section">
         <div class="text-content">
-            <img src="afeec.png" class="hero-logo" alt="AFEEC">
+            <img src="images/logoafeec.png" class="hero-logo" alt="AFEEC">
             <p>New Outfit for this Year</p>
             <h1><span style="color: gray;">FRESH LOOK,</span> FRESH DEALS</h1>
             <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
             <button class="shop-btn">SHOP NOW</button>
         </div>
-        <img src="img.jpg" class="right-img" alt="Models">
+        <img src="images/featuredproduct.png" class="right-img" alt="Models">
     </section>
 
     <!-- New Release Section -->
     <h2 class="title">New Release</h2>
     <section class="product-grid">
         <div class="product-card">
-            <img src="img.jpg" alt="Product 1">
+            <img src="images/skatersoul.png" alt="Product 1">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱699.00</p>
         </div>
         <div class="product-card">
-            <img src="img.jpg" alt="Product 2">
+            <img src="images/chaosclowntee.png" alt="Product 2">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
         <div class="product-card">
-            <img src="img.jpg" alt="Product 3">
+            <img src="images/ashfadebite.jpg" alt="Product 3">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
         <div class="product-card">
-            <img src="img.jpg" alt="Product 4">
+            <img src="images/skatercrewcrop.png" alt="Product 4">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱499.00</p>
         </div>
@@ -120,10 +120,9 @@
         </div>
     </section>
 
-    <!-- FOOTER - PROPERLY STRUCTURED -->
+    <!-- FOOTER - FIXED CLASS NAMES -->
     <footer class="site-footer">
         <div class="footer-main">
-            <!-- Left: Newsletter -->
             <div class="footer-left-section">
                 <h2 class="footer-heading">Newsletter</h2>
                 <p class="footer-text">Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
@@ -133,7 +132,6 @@
                 </form>
             </div>
 
-            <!-- Right: Info Grid -->
             <div class="footer-right-section">
                 <div class="footer-info-item">
                     <h3 class="footer-subtitle">Schedule</h3>
