--- a/index.html
+++ b/index.html
@@ -120,58 +120,50 @@
         </div>
     </section>
 
-    <!-- FOOTER - FIXED CLASS NAMES -->
+    <!-- FOOTER -->
     <footer class="site-footer">
         <div class="footer-main">
-            <div class="footer-left-section">
-                <h2 class="footer-heading">Newsletter</h2>
-                <p class="footer-text">Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-                <form class="footer-newsletter-form">
-                    <input type="email" class="footer-email-input" placeholder="Email address" required>
-                    <button type="submit" class="footer-submit-btn">Subscribe</button>
+            <!-- Column 1: Newsletter -->
+            <div class="footer-col footer-newsletter-col">
+                <h2>Newsletter</h2>
+                <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+                <form class="newsletter-form-inline">
+                    <input type="email" placeholder="Email address" required>
+                    <button type="submit">Subscribe</button>
                 </form>
             </div>
 
-            <div class="footer-right-section">
-                <div class="footer-info-item">
-                    <h3 class="footer-subtitle">Schedule</h3>
-                    <p class="footer-detail"><strong>Monday - Friday</strong></p>
-                    <p class="footer-detail">8:00 AM - 5:00 PM</p>
+            <!-- Column 2: Schedule & Address -->
+            <div class="footer-col footer-info-col">
+                <div class="info-section">
+                    <h3>Schedule</h3>
+                    <p><strong>Monday - Friday</strong></p>
+                    <p>8:00 AM - 5:00 PM</p>
                 </div>
-
-                <div class="footer-info-item">
-                    <h3 class="footer-subtitle">Address</h3>
-                    <p class="footer-detail">Technological Institute of the Philippines</p>
-                    <p class="footer-detail">Quezon City</p>
+                <div class="info-section">
+                    <h3>Address</h3>
+                    <p>Technological Institute of the Philippines</p>
+                    <p>Quezon City</p>
                 </div>
+            </div>
 
-                <div class="footer-info-item">
-                    <h3 class="footer-subtitle">Follow us</h3>
-                    <a href="https://facebook.com" class="footer-social-link" target="_blank">
-                        <i class="fa-brands fa-facebook"></i> Facebook
-                    </a>
-                    <a href="https://instagram.com" class="footer-social-link" target="_blank">
-                        <i class="fa-brands fa-instagram"></i> Instagram
-                    </a>
-                    <a href="https://tiktok.com" class="footer-social-link" target="_blank">
-                        <i class="fa-brands fa-tiktok"></i> TikTok
-                    </a>
+            <!-- Column 3: Follow Us & Contact -->
+            <div class="footer-col footer-social-col">
+                <div class="info-section">
+                    <h3>Follow us</h3>
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://tiktok.com" target="_blank">TikTok</a>
                 </div>
-
-                <div class="footer-info-item">
-                    <h3 class="footer-subtitle">Contact</h3>
-                    <p class="footer-detail">
-                        <i class="fa-solid fa-phone"></i> +63 912 345 67890
-                    </p>
-                    <p class="footer-detail">
-                        <i class="fa-solid fa-envelope"></i> 
-                        <a href="mailto:afeec@tip.edu.ph" class="footer-email-link">afeec@tip.edu.ph</a>
-                    </p>
+                <div class="info-section">
+                    <h3>Contact</h3>
+                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
+                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
                 </div>
             </div>
         </div>
 
-        <div class="footer-bottom-bar">
+        <div class="footer-copyright">
             <p>&copy; 2025 AFEEC. All rights reserved.</p>
         </div>
     </footer>
