--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p class="price">₱699.00</p>
         </div>
         <div class="product-card">
-            <img src="images/chaosclowntee.png" alt="Product 2">
+            <img src="iamges/chaosclowntee.png" alt="Product 2">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
@@ -120,45 +120,42 @@
         </div>
     </section>
 
-    <!-- FOOTER -->
-    <footer class="site-footer">
-        <div class="footer-main">
-            <!-- Column 1: Newsletter -->
-            <div class="footer-col footer-newsletter-col">
+    <!-- FOOTER - EXACT REFERENCE DESIGN -->
+    <footer class="footer">
+        <div class="footer-wrapper">
+            <div class="footer-newsletter">
                 <h2>Newsletter</h2>
                 <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-                <form class="newsletter-form-inline">
+                <form class="newsletter-form">
                     <input type="email" placeholder="Email address" required>
                     <button type="submit">Subscribe</button>
                 </form>
             </div>
 
-            <!-- Column 2: Schedule & Address -->
-            <div class="footer-col footer-info-col">
-                <div class="info-section">
+            <div class="footer-info-grid">
+                <div class="info-item">
                     <h3>Schedule</h3>
                     <p><strong>Monday - Friday</strong></p>
                     <p>8:00 AM - 5:00 PM</p>
                 </div>
-                <div class="info-section">
+
+                <div class="info-item">
                     <h3>Address</h3>
                     <p>Technological Institute of the Philippines</p>
                     <p>Quezon City</p>
                 </div>
-            </div>
 
-            <!-- Column 3: Follow Us & Contact -->
-            <div class="footer-col footer-social-col">
-                <div class="info-section">
+                <div class="info-item">
                     <h3>Follow us</h3>
-                    <a href="https://facebook.com" target="_blank">Facebook</a>
-                    <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://tiktok.com" target="_blank">TikTok</a>
+                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                    <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
                 </div>
-                <div class="info-section">
+
+                <div class="info-item">
                     <h3>Contact</h3>
-                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
-                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+                    <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
+                    <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
                 </div>
             </div>
         </div>
@@ -168,6 +165,9 @@
         </div>
     </footer>
 
+
     <script src="script.js"></script>
 </body>
 </html>
+
+
