--- a/index.html
+++ b/index.html
@@ -120,42 +120,46 @@
         </div>
     </section>
 
-    <!-- FOOTER - EXACT REFERENCE DESIGN -->
-    <footer class="footer">
-        <div class="footer-wrapper">
-            <div class="footer-newsletter">
+       <!-- FOOTER - EXACT REFERENCE MATCH -->
+    <footer class="site-footer">
+        <div class="footer-main">
+            <!-- Column 1: Newsletter -->
+            <div class="footer-col footer-newsletter-col">
                 <h2>Newsletter</h2>
                 <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-                <form class="newsletter-form">
+                <form class="newsletter-form-inline">
                     <input type="email" placeholder="Email address" required>
                     <button type="submit">Subscribe</button>
                 </form>
             </div>
 
-            <div class="footer-info-grid">
-                <div class="info-item">
+            <!-- Column 2: Schedule & Address -->
+            <div class="footer-col footer-info-col">
+                <div class="info-section">
                     <h3>Schedule</h3>
-                    <p><strong>Monday - Friday</strong></p>
-                    <p>8:00 AM - 5:00 PM</p>
+                    <p><strong>Monday - Sunday</strong></p>
+                    <p><strong>Bar:</strong> 9am - 11pm</p>
+                    <p><strong>Kitchen:</strong> 9am - 7pm</p>
                 </div>
-
-                <div class="info-item">
+                <div class="info-section">
                     <h3>Address</h3>
                     <p>Technological Institute of the Philippines</p>
                     <p>Quezon City</p>
                 </div>
+            </div>
 
-                <div class="info-item">
+            <!-- Column 3: Follow Us & Contact -->
+            <div class="footer-col footer-social-col">
+                <div class="info-section">
                     <h3>Follow us</h3>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
-                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
-                    <a href="https://tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i> TikTok</a>
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://tiktok.com" target="_blank">Tripadvisor</a>
                 </div>
-
-                <div class="info-item">
+                <div class="info-section">
                     <h3>Contact</h3>
-                    <p><i class="fa-solid fa-phone"></i> +63 912 345 67890</p>
-                    <p><i class="fa-solid fa-envelope"></i> <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
+                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
                 </div>
             </div>
         </div>
@@ -166,8 +170,10 @@
     </footer>
 
 
+
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
