--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <p class="price">₱699.00</p>
         </div>
         <div class="product-card">
-            <img src="iamges/chaosclowntee.png" alt="Product 2">
+            <img src="images/chaosclowntee.png" alt="Product 2">
             <h3>New Outfit for this Year</h3>
             <p class="price">₱599.00</p>
         </div>
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-       <!-- FOOTER - EXACT REFERENCE MATCH -->
+    <!-- FOOTER -->
     <footer class="site-footer">
         <div class="footer-main">
             <!-- Column 1: Newsletter -->
@@ -137,9 +137,8 @@
             <div class="footer-col footer-info-col">
                 <div class="info-section">
                     <h3>Schedule</h3>
-                    <p><strong>Monday - Sunday</strong></p>
-                    <p><strong>Bar:</strong> 9am - 11pm</p>
-                    <p><strong>Kitchen:</strong> 9am - 7pm</p>
+                    <p><strong>Monday - Friday</strong></p>
+                    <p>8:00 AM - 5:00 PM</p>
                 </div>
                 <div class="info-section">
                     <h3>Address</h3>
@@ -154,7 +153,7 @@
                     <h3>Follow us</h3>
                     <a href="https://facebook.com" target="_blank">Facebook</a>
                     <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://tiktok.com" target="_blank">Tripadvisor</a>
+                    <a href="https://tiktok.com" target="_blank">TikTok</a>
                 </div>
                 <div class="info-section">
                     <h3>Contact</h3>
@@ -169,11 +168,6 @@
         </div>
     </footer>
 
-
-
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
