--- a/index.html
+++ b/index.html
@@ -166,55 +166,57 @@
         </div>
     </div>
         <!-- FOOTER - EXACT REFERENCE MATCH -->
-    <footer class="site-footer">
-        <div class="footer-main">
-            <!-- Column 1: Newsletter -->
-            <div class="footer-col footer-newsletter-col">
-                <h2>Newsletter</h2>
-                <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-                <form class="newsletter-form-inline">
-                    <input type="email" placeholder="Email address" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
+    <!-- FOOTER -->
+<footer class="site-footer">
+    <div class="footer-main">
+        <!-- Column 1: Newsletter -->
+        <div class="footer-col footer-newsletter-col">
+            <h2>Newsletter</h2>
+            <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+            <form class="newsletter-form-inline">
+                <input type="email" placeholder="Email address" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
 
-            <!-- Column 2: Schedule & Address -->
-            <div class="footer-col footer-info-col">
-                <div class="info-section">
-                    <h3>Schedule</h3>
-                    <p><strong>Monday - Sunday</strong></p>
-                    <p><strong>Bar:</strong> 9am - 11pm</p>
-                    <p><strong>Kitchen:</strong> 9am - 7pm</p>
-                </div>
-                <div class="info-section">
-                    <h3>Address</h3>
-                    <p>Technological Institute of the Philippines</p>
-                    <p>Quezon City</p>
-                </div>
+        <!-- Column 2: Schedule & Address -->
+        <div class="footer-col footer-info-col">
+            <div class="info-section">
+                <h3>Schedule</h3>
+                <p><strong>Monday - Saturday</strong></p>
+                <p>8:00 AM - 5:00 PM</p>
             </div>
-
-            <!-- Column 3: Follow Us & Contact -->
-            <div class="footer-col footer-social-col">
-                <div class="info-section">
-                    <h3>Follow us</h3>
-                    <a href="https://facebook.com" target="_blank">Facebook</a>
-                    <a href="https://instagram.com" target="_blank">Instagram</a>
-                    <a href="https://tiktok.com" target="_blank">Tripadvisor</a>
-                </div>
-                <div class="info-section">
-                    <h3>Contact</h3>
-                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
-                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
-                </div>
+            <div class="info-section">
+                <h3>Address</h3>
+                <p>Technological Institute of the Philippines</p>
+                <p>Quezon City</p>
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <p>&copy; 2025 AFEEC. All rights reserved.</p>
+        <!-- Column 3: Follow Us & Contact -->
+        <div class="footer-col footer-social-col">
+            <div class="info-section">
+                <h3>Follow us</h3>
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+                <a href="https://x.com" target="_blank">X</a>
+            </div>
+            <div class="info-section">
+                <h3>Contact</h3>
+                <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
+                <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+            </div>
         </div>
-    </footer>
+    </div>
+
+    <div class="footer-copyright">
+        <p>&copy; 2025 AFEEC. All rights reserved.</p>
+    </div>
+</footer>
+
 
 
     <script src="script.js"></script>
 </body>
 </html>
+
