--- a/index.html
+++ b/index.html
@@ -3,92 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AFEEC - Streetwear Fashion</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>AFEEC - Modern Streetwear</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation Bar -->
+    <!-- Navigation -->
     <nav>
         <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo-img">
         <div class="nav-links">
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="#blog">Blog</a>
-            <a href="#shop">Shop</a>
+            <a href="shop.html">Shop</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </div>
         <div class="icons">
-            <label for="search-toggle">
-                <i class="fas fa-search"></i>
-            </label>
             <input type="checkbox" id="search-toggle">
+            <label for="search-toggle"><i class="fa-solid fa-magnifying-glass"></i></label>
             <div class="search-box">
-                <input type="text" placeholder="Search products...">
+                <input type="text" placeholder="Search...">
             </div>
-            <a href="#login-modal"><i class="fas fa-user"></i></a>
-            <i class="fas fa-shopping-cart"></i>
+            <a href="#login"><i class="fa-solid fa-user"></i></a>
+            <a href="shop.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
     </nav>
 
+    <!-- Login Modal -->
+    <div class="login-modal" id="login">
+        <div class="login-box">
+            <img src="images/logoafeec.png" class="logo" alt="Logo">
+            <h2>Login</h2>
+            <form>
+                <input type="text" placeholder="Username" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit" class="btn">Login</button>
+            </form>
+            <div class="links">
+                <a href="#">Forgot Password?</a>
+                <a href="#">Sign Up</a>
+            </div>
+            <a href="#" class="close-btn">Close</a>
+        </div>
+    </div>
+
     <!-- Hero Section -->
     <section class="content-section">
-        <!-- Left side: Text content -->
         <div class="text-content">
-            <img src="images/logoafeec.png" alt="AFEEC" class="hero-logo">
+            <img src="images/logoafeec.png" class="hero-logo" alt="AFEEC">
             <p>New Outfit for this Year</p>
-            <h1><span style="color: #999;">FRESH LOOK,</span> FRESH DEALS</h1>
+            <h1><span style="color: gray;">FRESH LOOK,</span> FRESH DEALS</h1>
             <h4>Your Wardrobe's Glow-up Starts here - Up to 70% Off</h4>
-            <button class="shop-btn">SHOP NOW</button>
+            <a href="shop.html"><button class="shop-btn">SHOP NOW</button></a>
         </div>
-        
-        <!-- Right side: Featured image -->
-        <img src="images/featuredproduct.png" alt="AFEEC Models" class="right-img">
+        <img src="images/featuredproduct.png" class="right-img" alt="Models">
     </section>
 
     <!-- New Release Section -->
     <h2 class="title">New Release</h2>
-    <div class="product-grid">
-        <!-- Product Card 1 -->
+    <section class="product-grid">
         <div class="product-card">
-            <img src="images/skatersould.png" alt="Skater Soul Graphic Tee">
-            <h3>Skater Soul Graphic Tee</h3>
-            <h5>Black cotton t-shirt with a large graphic print showing a skull and skateboard. Standard fit with short sleeves.</h5>
+            <img src="images/skatersoul.png" alt="Product 1">
+            <h3>Skater Soul Tee</h3>
             <p class="price">₱599.00</p>
         </div>
-
-        <!-- Product Card 2 -->
         <div class="product-card">
-            <img src="images/chaosclowntee.png" alt="Chaos Clown Tee">
+            <img src="images/chaosclowntee.png" alt="Product 2">
             <h3>Chaos Clown Tee</h3>
-            <h5>Black cotton t-shirt featuring a red and white graphic of a clown face. Relaxed fit, short sleeves.</h5>
             <p class="price">₱599.00</p>
         </div>
-
-        <!-- Product Card 3 -->
         <div class="product-card">
-            <img src="images/ashfadebite.jpg" alt="AshModo Bite Tee">
-            <h3>AshModo Bite Tee</h3>
-            <h5>Beige cotton t-shirt with a blank print showing an open mouth and teeth. Standard fit with short sleeves.</h5>
+            <img src="images/ashfadebite.jpg" alt="Product 3">
+            <h3>Ash Fade Bite</h3>
             <p class="price">₱599.00</p>
         </div>
-
-        <!-- Product Card 4 -->
         <div class="product-card">
-            <img src="images/skatervewcrop.png" alt="Skater Crew Crop Tee">
-            <h3>Skater Crew Crop Tee</h3>
-            <h5>Black cropped t-shirt with a white graphic print of a figure. Relaxed fit with short sleeves.</h5>
+            <img src="images/skatercrewcrop.png" alt="Product 4">
+            <h3>Skater Crew Crop</h3>
             <p class="price">₱499.00</p>
         </div>
-    </div>
+    </section>
 
     <!-- About Section -->
-    <section class="about-section">
-        <h2>About Us</h2>
-        <p>Welcome to <strong>AFEEC</strong> – your go-to destination for modern streetwear and stylish apparel. We believe fashion should be comfortable, expressive, and accessible for everyone. Every collection we design is made to bring confidence and creativity to your everyday look.</p>
+    <section class="about-section" id="about">
+        <h2>Welcome to <strong>AFEEC</strong></h2>
+        <p>— your go-to destination for modern streetwear and stylish apparel.</p>
+        <p>We believe fashion should be comfortable, expressive, and accessible for everyone. Every collection we design is made to bring confidence and creativity to your everyday look.</p>
         <p>From trendy tops to timeless accessories, <strong>AFEEC</strong> represents individuality, passion, and the love for bold fashion. Be part of our growing community and wear your story with pride.</p>
         <div class="button-container">
             <button class="cta-about">Learn More</button>
@@ -96,109 +97,77 @@
     </section>
 
     <!-- Categories Section -->
-    <h2 class="title">Why Choose Us</h2>
-    <div class="categories">
+    <section class="categories">
         <div class="category-box">
-            <i class="fas fa-tshirt"></i>
+            <i class="fa-solid fa-shirt"></i>
             <h3>Very Soft Fabric</h3>
-            <p>Made with smooth and comfy material that feels great on your skin.</p>
+            <p>Made with smooth and comfy material that feels gentle on your skin.</p>
         </div>
         <div class="category-box">
-            <i class="fas fa-cut"></i>
+            <i class="fa-solid fa-scissors"></i>
             <h3>Durable Quality</h3>
-            <p>Designed to last. Does not get dirty easily even after repeated use.</p>
+            <p>Designed to last, Does not get dirty easily even after repeated use.</p>
         </div>
         <div class="category-box">
-            <i class="fas fa-wind"></i>
+            <i class="fa-solid fa-droplet"></i>
             <h3>Skin-Friendly</h3>
             <p>Safe and gentle for all skin types, perfect for everyday wear.</p>
         </div>
         <div class="category-box">
-            <i class="fas fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
             <h3>Made with Care</h3>
             <p>Each piece is crafted with love and attention to detail for your comfort.</p>
         </div>
-    </div>
-
-    <!-- Newsletter Signup Section -->
-    <section class="newsletter-section">
-        <div class="newsletter-container">
-            <h3>Stay Updated</h3>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Enter your email for newsletter" required>
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
     </section>
-    
-    <!-- Login Modal (Moved after footer for proper z-index layering) -->
-    <div id="login-modal" class="login-modal">
-        <div class="login-box">
-            <img src="images/logoafeec.png" alt="AFEEC Logo" class="logo">
-            <h2>Login</h2>
-            <input type="text" placeholder="Username or Email">
-            <input type="password" placeholder="Password">
-            <button class="btn">Login</button>
-            <div class="links">
-                <a href="#">Forgot Password?</a>
-                <a href="#">Create Account</a>
-            </div>
-            <a href="#" class="close-btn">Close</a>
-        </div>
-    </div>
-        <!-- FOOTER - EXACT REFERENCE MATCH -->
-    <!-- FOOTER -->
-<footer class="site-footer">
-    <div class="footer-main">
-        <!-- Column 1: Newsletter -->
-        <div class="footer-col footer-newsletter-col">
-            <h2>Newsletter</h2>
-            <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
-            <form class="newsletter-form-inline">
-                <input type="email" placeholder="Email address" required>
-                <button type="submit">Subscribe</button>
-            </form>
-        </div>
 
-        <!-- Column 2: Schedule & Address -->
-        <div class="footer-col footer-info-col">
-            <div class="info-section">
-                <h3>Schedule</h3>
-                <p><strong>Monday - Saturday</strong></p>
-                <p>8:00 AM - 5:00 PM</p>
+    <!-- FOOTER - COMPACT BLACK DESIGN -->
+    <footer class="site-footer" id="contact">
+        <div class="footer-main">
+            <!-- Column 1: Newsletter -->
+            <div class="footer-col footer-newsletter-col">
+                <h2>Newsletter</h2>
+                <p>Want to know what we're up to? Sign up for the newsletter and join our tribe.</p>
+                <form class="newsletter-form-inline">
+                    <input type="email" placeholder="Email address" required>
+                    <button type="submit">Subscribe</button>
+                </form>
             </div>
-            <div class="info-section">
-                <h3>Address</h3>
-                <p>Technological Institute of the Philippines</p>
-                <p>Quezon City</p>
-            </div>
-        </div>
 
-        <!-- Column 3: Follow Us & Contact -->
-        <div class="footer-col footer-social-col">
-            <div class="info-section">
-                <h3>Follow us</h3>
-                <a href="https://facebook.com" target="_blank">Facebook</a>
-                <a href="https://instagram.com" target="_blank">Instagram</a>
-                <a href="https://x.com" target="_blank">X</a>
+            <!-- Column 2: Schedule & Address -->
+            <div class="footer-col footer-info-col">
+                <div class="info-section">
+                    <h3>Schedule</h3>
+                    <p><strong>Monday - Saturday</strong></p>
+                    <p>8:00 AM - 5:00 PM</p>
+                </div>
+                <div class="info-section">
+                    <h3>Address</h3>
+                    <p>Technological Institute of the Philippines</p>
+                    <p>Quezon City</p>
+                </div>
             </div>
-            <div class="info-section">
-                <h3>Contact</h3>
-                <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
-                <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+
+            <!-- Column 3: Follow Us & Contact -->
+            <div class="footer-col footer-social-col">
+                <div class="info-section">
+                    <h3>Follow us</h3>
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://x.com" target="_blank">X</a>
+                </div>
+                <div class="info-section">
+                    <h3>Contact</h3>
+                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
+                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer-copyright">
-        <p>&copy; 2025 AFEEC. All rights reserved.</p>
-    </div>
-</footer>
-
-
+        <div class="footer-copyright">
+            <p>&copy; 2025 AFEEC. All rights reserved.</p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
-
