--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 </div>
                 <div class="info-section">
                     <h3>Contact</h3>
-                    <p>T: <a href="tel:+639123456790">+63 912 345 6790</a></p>
-                    <p>E: <a href="mailto:afeec@tip.edu.ph">afeec@tip.edu.ph</a></p>
+                    <p>T: +63 912 345 6790 </p>
+                    <p>E: afeec@tip.edu.ph </p>
                 </div>
             </div>
         </div>
@@ -171,3 +171,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
